--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@sparticuz/chromium": "^126.0.0",
+    "@sparticuz/chromium-min": "^126.0.0",
+    "@types/uuid": "^10.0.0",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.3",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "groq-sdk": "^0.9.0",
     "next": "15.0.4",
     "prettier": "^3.4.2",
+    "puppeteer-core": "^22.13.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
